cmake_minimum_required(VERSION 3.13)  # CMake version check
set(CMAKE_CXX_STANDARD 14)            # Enable c++14 standard

#project(labAssignmentEleven)
#add_executable(labAssignmentEleven labAssignmentEleven.c)

project(sampleProgramOne)
add_executable(sampleProgramOne sample_programs/sampleProgramOne.c)