cmake_minimum_required(VERSION 3.13)  # CMake version check
set(CMAKE_CXX_STANDARD 14)            # Enable c++14 standard

project(q1)
add_executable(q1 q1.c)

project(q2)
add_executable(q2 q2.c)

project(q3)
add_executable(q3 q3.c)

project(q4)
add_executable(q4 q4.c)

project(q5)
add_executable(q5 q5.c)

project(q6)
add_executable(q6 q6.c)

project(q7)
add_executable(q7 q7.c)

project(q8)
add_executable(q8 q8.c)

project(q9)
add_executable(q9 q9.c)

project(q10)
add_executable(q10 q10.c)

project(q11)
add_executable(q11 q11.c)